# colorgrab

./: .gitignore  CMYKModel.cpp  CMYKModel.h  CMakeLists.txt  CssRgbOutput.cpp  CssRgbOutput.h  GrabDropSource.cpp  GrabDropSource.h  GrabFrame.cpp  GrabFrame.h  HSLModel.cpp  HSLModel.h  HtmlHexOutput.cpp  HtmlHexOutput.h  IColorModel.cpp  IColorModel.h  IColorOutput.h  ImagePanel.cpp  ImagePanel.h  LICENSE  LICENSE.txt  MainFrame.cpp  MainFrame.h  README.md  RGBModel.cpp  RGBModel.h  ToolWindow.cpp  ToolWindow.h  ZoomPanel.cpp  ZoomPanel.h  coloroutputs.cpp  coloroutputs.h  main.cpp  win_resources.rc  wxcrafter.cpp  wxcrafter.h  wxcrafter.wxcp  wxcrafter_bitmaps.cpp  wxcrafter_bitmaps.xrc
img/: eyedropper.xpm
pkg/arch/: PKGBUILD
pkg/rpm/: colorgrab.spec
pkg/win/: installer.iss
pkg/win/files/: license.txt
src/: ColorDropTarget.h  ImagePanel.cpp  ImagePanel.h  MainFrame.cpp  MainFrame.h  ToolWindow.cpp  ToolWindow.h  ZoomPanel.cpp  ZoomPanel.h  colordnd.h  colormodels.cpp  colormodels.h  coloroutputs.cpp  coloroutputs.h  main.cpp  win_resources.rc  wxcrafter.cpp  wxcrafter.h  wxcrafter.wxcp  wxcrafter_bitmaps.cpp  wxcrafter_bitmaps.xrc
src/tools/: CylindricalSelectorTool.cpp  CylindricalSelectorTool.h  PaletteTool.cpp  PaletteTool.h
src/tools/palettetool/: PaletteTool.cpp  PaletteTool.h
